framework/contracts/account/manager/tests/snapshots/install_modules__adds_module_to_account_modules-úÃº¡f9Ê´K})¨7ÐvNÚ¡ëã}d.snap
---
source: contracts/account/manager/tests/install_modules.rs
expression: chain.app.borrow().dump_wasm_raw(&contract_addr)
---
- - - 0
    - 7
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 115
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 112
    - 114
    - 111
    - 120
    - 121
  - - 34
    - 195
    - 152
    - 194
    - 158
    - 74
    - 92
    - 92
    - 195
    - 140
    - 49
    - 194
    - 172
    - 194
    - 180
    - 66
    - 194
    - 180
    - 194
    - 130
    - 195
    - 155
    - 87
    - 110
    - 92
    - 34
    - 194
    - 143
    - 194
    - 130
    - 92
    - 117
    - 48
    - 48
    - 49
    - 66
    - 92
    - 117
    - 48
    - 48
    - 49
    - 50
    - 96
    - 194
    - 177
    - 194
    - 143
    - 194
    - 191
    - 57
    - 194
    - 189
    - 92
    - 117
    - 48
    - 48
    - 48
    - 53
    - 92
    - 117
    - 48
    - 48
    - 48
    - 50
    - 195
    - 141
    - 194
    - 186
    - 195
    - 177
    - 195
    - 185
    - 194
    - 172
    - 34
- - - 0
    - 7
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 115
    - 116
    - 101
    - 115
    - 116
    - 101
    - 114
    - 58
    - 109
    - 111
    - 99
    - 107
    - 45
    - 97
    - 100
    - 97
    - 112
    - 116
    - 101
    - 114
    - 49
  - - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 49
    - 48
    - 34
- - - 0
    - 123
    - 49
    - 50
    - 125
    - 105
    - 115
    - 95
    - 115
    - 117
    - 115
    - 112
    - 101
    - 110
    - 100
    - 101
    - 100
  - - 102
    - 97
    - 108
    - 115
    - 101
- - - 0
    - 123
    - 52
    - 125
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 110
    - 97
    - 109
    - 101
    - 34
    - 58
    - 34
    - 68
    - 101
    - 102
    - 97
    - 117
    - 108
    - 116
    - 32
    - 65
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 32
    - 65
    - 99
    - 99
    - 111
    - 117
    - 110
    - 116
    - 34
    - 44
    - 34
    - 103
    - 111
    - 118
    - 101
    - 114
    - 110
    - 97
    - 110
    - 99
    - 101
    - 95
    - 100
    - 101
    - 116
    - 97
    - 105
    - 108
    - 115
    - 34
    - 58
    - 123
    - 34
    - 77
    - 111
    - 110
    - 97
    - 114
    - 99
    - 104
    - 121
    - 34
    - 58
    - 123
    - 34
    - 109
    - 111
    - 110
    - 97
    - 114
    - 99
    - 104
    - 34
    - 58
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 125
    - 125
    - 44
    - 34
    - 99
    - 104
    - 97
    - 105
    - 110
    - 95
    - 105
    - 100
    - 34
    - 58
    - 34
    - 99
    - 111
    - 115
    - 109
    - 111
    - 115
    - 45
    - 116
    - 101
    - 115
    - 116
    - 110
    - 101
    - 116
    - 45
    - 49
    - 52
    - 48
    - 48
    - 50
    - 34
    - 44
    - 34
    - 100
    - 101
    - 115
    - 99
    - 114
    - 105
    - 112
    - 116
    - 105
    - 111
    - 110
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 44
    - 34
    - 108
    - 105
    - 110
    - 107
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 125
- - - 0
    - 123
    - 54
    - 125
    - 99
    - 111
    - 110
    - 102
    - 105
    - 103
  - - 123
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 95
    - 99
    - 111
    - 110
    - 116
    - 114
    - 111
    - 108
    - 95
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 49
    - 34
    - 44
    - 34
    - 109
    - 111
    - 100
    - 117
    - 108
    - 101
    - 95
    - 102
    - 97
    - 99
    - 116
    - 111
    - 114
    - 121
    - 95
    - 97
    - 100
    - 100
    - 114
    - 101
    - 115
    - 115
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 50
    - 34
    - 125
- - - 97
    - 99
    - 99
    - 95
    - 105
    - 100
  - - 123
    - 34
    - 116
    - 114
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 108
    - 111
    - 99
    - 97
    - 108
    - 34
    - 44
    - 34
    - 115
    - 101
    - 113
    - 34
    - 58
    - 49
    - 125
- - - 99
    - 111
    - 110
    - 116
    - 101
    - 120
    - 116
  - - 91
    - 93
- - - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 95
    - 105
    - 110
    - 102
    - 111
  - - 123
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 34
    - 58
    - 34
    - 97
    - 98
    - 115
    - 116
    - 114
    - 97
    - 99
    - 116
    - 58
    - 109
    - 97
    - 110
    - 97
    - 103
    - 101
    - 114
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 48
    - 46
    - 49
    - 57
    - 46
    - 50
    - 34
    - 125
- - - 105
    - 99
    - 111
    - 110
    - 116
    - 101
    - 120
    - 116
  - - 91
    - 91
    - 123
    - 34
    - 105
    - 110
    - 102
    - 111
    - 34
    - 58
    - 123
    - 34
    - 110
    - 97
    - 109
    - 101
    - 115
    - 112
    - 97
    - 99
    - 101
    - 34
    - 58
    - 34
    - 116
    - 101
    - 115
    - 116
    - 101
    - 114
    - 34
    - 44
    - 34
    - 110
    - 97
    - 109
    - 101
    - 34
    - 58
    - 34
    - 109
    - 111
    - 99
    - 107
    - 45
    - 97
    - 100
    - 97
    - 112
    - 116
    - 101
    - 114
    - 49
    - 34
    - 44
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 123
    - 34
    - 118
    - 101
    - 114
    - 115
    - 105
    - 111
    - 110
    - 34
    - 58
    - 34
    - 49
    - 46
    - 48
    - 46
    - 48
    - 34
    - 125
    - 125
    - 44
    - 34
    - 114
    - 101
    - 102
    - 101
    - 114
    - 101
    - 110
    - 99
    - 101
    - 34
    - 58
    - 123
    - 34
    - 97
    - 100
    - 97
    - 112
    - 116
    - 101
    - 114
    - 34
    - 58
    - 34
    - 99
    - 111
    - 110
    - 116
    - 114
    - 97
    - 99
    - 116
    - 49
    - 48
    - 34
    - 125
    - 125
    - 44
    - 110
    - 117
    - 108
    - 108
    - 93
    - 93
- - - 111
    - 119
    - 110
    - 101
    - 114
    - 115
    - 104
    - 105
    - 112
  - - 123
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 34
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 111
    - 119
    - 110
    - 101
    - 114
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 44
    - 34
    - 112
    - 101
    - 110
    - 100
    - 105
    - 110
    - 103
    - 95
    - 101
    - 120
    - 112
    - 105
    - 114
    - 121
    - 34
    - 58
    - 110
    - 117
    - 108
    - 108
    - 125

